--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>xmldoc browser test</title>
-    <script type="text/javascript" src="./src/sax.js"></script>
-    <script type="text/javascript" src="./src/xmldoc.js"></script>
-    <script type="text/javascript">
-      // Demonstrate parsing an in-memory XML string
-      var xmlString = '<suggestions><book title="Twilight"/><book title="Twister"/></suggestions>'
-  
-      var suggestions = new XmlDocument(xmlString);
-  
-      // Demonstrate how toString() will pretty-print an abbreviated version of the XML for debugging
-      console.log("Parsed: \n" + suggestions);
-  
-      // Demonstrate a simple eachChild() loop, printing our book titles
-      suggestions.eachChild(function(book) {
-        document.write("<p>Found book with title: '" + book.attr.title + "'</p>");
-      });
-  </script>
-  </head>
+  <title>PrettyScribe</title>
+</head>
+
 <body>
+  <label for="roster-file">File</label>
+  <input type="file" files="roster-file" id="roster-file" name="roster-file">
+  <list id="list">
+  </list>
+
+  <script type="text/javascript" src="./src/app.js"></script>
+
 </body>
+
 </html>
