--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <list id="list">
   </list>
 
-  <script type="text/javascript" src="./src/app.js"></script>
+  <script type="text/javascript" src="./dist/app.js"></script>
 
 </body>
 
