--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
   <list id="list">
   </list>
 
+  <div id="roster-title"></div>
+  <div id="force-title"></div>
+  <table class="table table-striped" id="force-list">
+      <thead>
+            <tr>
+                  <th scope="col">Name</th>
+                  <th scope="col">Role</th>
+                  <th scope="col">Models</th>
+                  <th scope="col">Points</th>
+                  <th scope="col">Power</th>
+            </tr>
+      </thead>
+  </table>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
