--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       </list>
 
       <div id="roster-title"></div>
+      <div id="roster-lists"></div>
+      
       <div id="force-title"></div>
       <table class="table table-sm table-striped" id="force-list">
             <thead>
