Render multiple forces.

--- a/index.html
+++ b/index.html
@@ -35,24 +35,10 @@
       </list>
 
       <div id="roster-title"></div>
+
       <div id="roster-lists"></div>
       
-      <div id="force-title"></div>
-      <table class="table table-sm table-striped" id="force-list">
-            <thead>
-                  <tr>
-                        <th scope="col">Name</th>
-                        <th scope="col">Role</th>
-                        <th scope="col">Models</th>
-                        <th scope="col">Points</th>
-                        <th scope="col">Power</th>
-                  </tr>
-            </thead>
-      </table>
-
-      <div id="force-units">
-
-      </div>
+      <div id="force-units"></div>
 
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
