--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <link rel="stylesheet" href="./css/prettyscribe.css">
 
       <script src="https://kit.fontawesome.com/324895d590.js" crossorigin="anonymous"></script>
+      <script type="text/javascript" src="lib/zip.js"></script> 
+      
 </head>
 
 <body>
