Use webpack for building/packing.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" href="./css/prettyscribe.css">
 
       <script src="https://kit.fontawesome.com/324895d590.js" crossorigin="anonymous"></script>
-      <script type="text/javascript" src="lib/zip.js"></script> 
+      
       
 </head>
 
@@ -57,7 +57,7 @@
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
 
-      <script type="module" src="./dist/app.js"></script>
+      <script type="module" src="./dist/prettyscribe.js"></script>
 
 </body>
 
