HTML improvements.  More test rosters.

--- a/help.html
+++ b/help.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrettyScribe</title>
 
-     <!-- Bootstrap CSS -->
-     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/prettyscribe.css">
 
 </head>
@@ -15,38 +16,62 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
         <a href="index.html"><span class="navbar-brand">PrettyScribe</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbarHelp"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-              <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                          <a class="nav-link" href="help.html">Help</a>
-                    </li>
-                    <li class="nav-item">
-                          <a class="nav-link" href="about.html">About</a>
-                    </li>
-              </ul>
+        <div class="collapse navbar-collapse" id="collapsibleNavbarHelp">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="help.html">Help</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+            </ul>
         </div>
-  </nav>
+    </nav>
 
-  <h4>Usage</h4>
-  <p>Use the Browse button on the main PrettyScribe page to select a roster file for formatting.  That's it.
-      Print the resulting pages however you'd like.
-  </p>
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Usage</h4>
+            <p>Use the Browse button on the main PrettyScribe page to select a roster file for formatting. That's it.
+                Print the resulting pages however you'd like.
+            </p>
+            <h4>Detailed Instructions</h4>
+            <ol>
+                <li>Select roster file. Either a .ros or a .rosz file.</li>
+                <li>View or print how every you'd like.</li>
+                <li>????</li>
+                <li>Win LVO.</li>
+            </ol>
+        </div>
+    </div>
 
-  <h4>Background</h4>
-  <p>
-      PrettyScribe is a simple tool that takes army roster files created with BattleScribe and converts them to
-      an easier to read layout suitable for printing or viewing on your device.   PrettyScribe supports the rosters
-      for these game systems:
-      <ul>
-          <li>Warhammer 40k (8th Edition)</li>
-          <li>Warhammer 40k Kill Team</li>
-          <li>Warhammer Age of Sigmar</li>
-      </ul>
-  </p>
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Background</h4>
+            <p>
+                PrettyScribe is a simple tool that takes army roster files created with BattleScribe and
+                converts them to an easier to read layout suitable for printing or viewing on your device.
+                PrettyScribe supports the rosters for these game systems:
+                <ul>
+                    <li>Warhammer 40k (8th Edition)</li>
+                    <li>Warhammer 40k Kill Team</li>
+                    <li>Warhammer Age of Sigmar</li>
+                </ul>
+            </p>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
