--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
             <a href="index.html"><span class="navbar-brand">PrettyScribe</span></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
                   aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
             </button>
@@ -52,7 +52,7 @@
       <div class="input-group mb-3">
             <div class="custom-file">
               <input type="file" class="custom-file-input" files="roster-file" id="roster-file" name="roster-file">
-              <label class="custom-file-label" for="roster-file">Select file</label>
+              <label class="custom-file-label" for="roster-file">Select roster file (.ros, .rosz)</label>
             </div>
       </div>
 
