Add Credits.  Warn on unsupported game types.

--- a/about.html
+++ b/about.html
@@ -61,6 +61,15 @@
         useful also let me know why.
     </p>
 
+    <h4>Credits</h4>
+    <p>
+        Much credit for this work goes to the ButtScribe app by Goonhammer for the inspiration and the 
+        icons I shamelessly borrowed.
+    </p>
+     <p>
+        Credit also goes to the volunteer teams of BattleScribe catalog maintainers.   These teams
+        provide an invaluable service to the tabletop wargamming community.
+    </p>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
