--- a/help.html
+++ b/help.html
@@ -11,6 +11,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/prettyscribe.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
