--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <script src="https://kit.fontawesome.com/324895d590.js" crossorigin="anonymous"></script>
       
-      
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
