--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">  
       <title>PrettyScribe</title>
 
       <link href="https://fonts.googleapis.com/css?family=Fjalla+One|PT+Serif|Source+Sans+Pro&display=swap"
@@ -13,8 +15,6 @@
       <link rel="stylesheet" href="./css/prettyscribe.css">
 
       <script src="https://kit.fontawesome.com/324895d590.js" crossorigin="anonymous"></script>
-      
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
