--- a/help.html
+++ b/help.html
@@ -40,7 +40,7 @@
             <h4>Detailed Instructions</h4>
             <ol>
                 <li>Select roster file. Either a .ros or a .rosz file.</li>
-                <li>View or print how every you'd like.</li>
+                <li>View or print how ever you'd like.</li>
                 <li>????</li>
                 <li>Win LVO.</li>
             </ol>
