Add support for AoS-Warcry.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <img id="role_hs" src="./assets/icon_HS.png">
             <img id="role_lw" src="./assets/icon_LW.png">
             <img id="role_tr" src="./assets/icon_TR.png">
+            <img id="aos_stats" src="./assets/aos_stats.png">
       </div>
 
       <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
