Add Warcry to docs.

--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
     </p>
 
     <p>
-        Currently PrettyScribe supports roster files for Warhammer 40k, Warhammer 40k Kill Team and Warhammer Age of
-        Sigmar.
+        Currently PrettyScribe supports roster files for Warhammer 40k, Warhammer 40k Kill Team, Warhammer Age of
+        Sigmar and Warhammer Age of Sigmar Warcry.
         Compressed (.rosz) and uncompressed (.ros) roster formats are accepted.
     </p>
 
