--- a/help.html
+++ b/help.html
@@ -58,6 +58,7 @@
                     <li>Warhammer 40k (8th Edition)</li>
                     <li>Warhammer 40k Kill Team</li>
                     <li>Warhammer Age of Sigmar</li>
+                    <li>Warhammer Age of Sigmar Warcry</li>
                 </ul>
             </p>
         </div>
