Add bug reporting.

--- a/help.html
+++ b/help.html
@@ -64,6 +64,19 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Bugs</h4>
+            <p>
+                Bugs, suggestions and enhancements can all be posted on the
+                <a href="https://github.com/rweyrauch/PrettyScribe/issues">PrettyScribe GitHub</a> website.
+            </p>
+            <p>
+                When making a bug request it is most helpful if you could upload and attach the roster file
+                that exhibits the problem and with a brief description of the issue you are having.
+            </p>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
