--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
       <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
             <a href="index.html"><span class="navbar-brand">PrettyScribe</span></a>
+            <div>A pretty-printer for BattleScribe rosters.</div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
                   aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -75,7 +76,7 @@
                               <h4 class="modal-title">Message</h4>
                               <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
-                        <div class="modal-body" id="errorText">              
+                        <div class="modal-body" id="errorText">
                         </div>
                         <div class="modal-footer">
                               <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
