First pass at HH-30k.

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
     <p>
         Currently PrettyScribe supports roster files for Warhammer 40k, Warhammer 40k Kill Team, Warhammer Age of
-        Sigmar and Warhammer Age of Sigmar Warcry.
+        Sigmar Warhammer Age of Sigmar Warcry and Horus Heresy - Warhammer 30k.
         Compressed (.rosz) and uncompressed (.ros) roster formats are accepted.
     </p>
 
