--- a/help.html
+++ b/help.html
@@ -57,6 +57,7 @@
                 <ul>
                     <li>Warhammer 40k (8th Edition)</li>
                     <li>Warhammer 40k Kill Team</li>
+                    <li>Horus Heresy - Warhammer 30k</li>
                     <li>Warhammer Age of Sigmar</li>
                     <li>Warhammer Age of Sigmar Warcry</li>
                 </ul>
