--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
       <link href="https://fonts.googleapis.com/css?family=Fjalla+One|PT+Serif|Source+Sans+Pro&display=swap"
             rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap" rel="stylesheet">
 
       <!-- Bootstrap CSS -->
-      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+            integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
       <link rel="stylesheet" href="./css/prettyscribe.css">
 
       <script src="https://kit.fontawesome.com/324895d590.js" crossorigin="anonymous"></script>
@@ -29,7 +32,7 @@
             <img id="role_hs" src="./assets/icon_HS.png">
             <img id="role_lw" src="./assets/icon_LW.png">
             <img id="role_tr" src="./assets/icon_TR.png">
-            <img id="aos_stats" src="./assets/aos_stats.png">
+            <img id="aos_stats" src="./assets/aos_stats.svg">
       </div>
 
       <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
@@ -68,6 +71,170 @@
             <div id="force-units"></div>
       </div>
 
+      <div class="container-fluid" style="display:none;">
+            <div class="row">
+                  <div class="col-3">
+                        <div class="aos_unit_stats">
+                              <div class="aos_unit_move">
+                                    <p class="h2">6"</p>
+                              </div>
+                              <div class="aos_unit_wounds">
+                                    <p class="h2">1</p>
+                              </div>
+                              <div class="aos_unit_bravery">
+                                    <p class="h2">6</p>
+                              </div>
+                              <div class="aos_unit_save">
+                                    <p class="h2">5+</p>
+                              </div>
+                        </div>
+                  </div>
+                  <div class="col">
+                        <div class="p-2 mb-2 aos_medium text-center text-uppercase text-black"><span class="h3">Horrors
+                                    of Tzeentch</span></div>
+                        <table class="table table-sm aos_font text-center">
+                              <thead class="aos_light">
+                                    <tr>
+                                          <th>Missile Weapons</th>
+                                          <th>Range</th>
+                                          <th>Attacks</th>
+                                          <th>To Hit</th>
+                                          <th>To Wound</th>
+                                          <th>Rend</th>
+                                          <th>Damage</th>
+                                    </tr>
+                              </thead>
+                              <tbody>
+                                    <tr>
+                                          <td>Magical Flames</td>
+                                          <td>12"</td>
+                                          <td>*</td>
+                                          <td>5+</td>
+                                          <td>4+</td>
+                                          <td>-</td>
+                                          <td>1</td>
+                                    </tr>
+                              </tbody>
+                        </table>
+                        <table class="table table-sm aos_font text-center">
+                              <thead class="aos_light">
+                                    <tr>
+                                          <th>Melee Weapons</th>
+                                          <th>Range</th>
+                                          <th>Attacks</th>
+                                          <th>To Hit</th>
+                                          <th>To Wound</th>
+                                          <th>Rend</th>
+                                          <th>Damage</th>
+                                    </tr>
+                              </thead>
+                              <tbody>
+                                    <tr>
+                                          <td>Taloned Hands</td>
+                                          <td>1"</td>
+                                          <td>*</td>
+                                          <td>4+</td>
+                                          <td>4+</td>
+                                          <td>-</td>
+                                          <td>1</td>
+                                    </tr>
+                              </tbody>
+                        </table>
+
+                        <table class="table table-sm aos_font text-center">
+                              <thead>
+                                    <tr>
+                                          <th class="aos_medium">Damage Table</th>
+                                    </tr>
+                                    <tr class="aos_light">
+                                          <th>Horror Color</th>
+                                          <th>Magical Flames</th>
+                                          <th>Taloned Hands</th>
+                                          <th>Petty Vengeance Roll</th>
+                                    </tr>
+                              </thead>
+                              <tbody>
+                                    <tr>
+                                          <td>Iridescent</td>
+                                          <td>6</td>
+                                          <td>2</td>
+                                          <td>3+</td>
+                                    </tr>
+                                    <tr>
+                                          <td>Pink</td>
+                                          <td>3</td>
+                                          <td>1</td>
+                                          <td>4+</td>
+                                    </tr>
+                                    <tr>
+                                          <td>Blue</td>
+                                          <td>2</td>
+                                          <td>1</td>
+                                          <td>5+</td>
+                                    </tr>
+                                    <tr>
+                                          <td>Brimstone</td>
+                                          <td>1</td>
+                                          <td>2</td>
+                                          <td>6+</td>
+                                    </tr>
+                              </tbody>
+                        </table>
+                        <h4 class="text-uppercase">Abilities</h4>
+                        <p class="aos_font"><strong>STANDARD BEARER: </strong>1 in every
+                              10 Pink Horrors in this unit can be a
+                              Pink Horror Icon Bearer instead. At
+                              the start of your hero phase, if you have
+                              a Disciples of Tzeentch army, roll 1
+                              dice for each Pink Horror Icon Bearer
+                              in this unit. For each 3+, you receive 1
+                              Fate Point.
+                        </p>
+                        <p class="aos_font">
+                              <strong>MUSICIAN: </strong>1 in every 10 Pink
+                              Horrors in this unit can be a Pink
+                              Horror Hornblower instead. Add 1 to
+                              save rolls for this unit while it includes
+                              any Pink Horror Hornblowers.
+                        </p>
+                        <p class="aos_font">
+                              <strong>Split and Split Again: </strong>
+                              Each time an Iridescent Horror or
+                              Pink Horror in this unit is slain by a
+                              wound or mortal wound, it does not
+                              count as having been slain but you must
+                              immediately remove it from play and
+                              replace it with 2 Blue Horrors that are
+                              added to its unit.
+
+                              Each time a Blue Horror in this unit is
+                              slain by a wound or mortal wound, it
+                              does not count as having been slain but
+                              you must immediately remove it from
+                              play and replace it with 1 Brimstone
+                              Horrors model that is added to its unit.
+                        </p>
+                        <p class="aos_font">
+                              <strong>Petty Vengeance: </strong>
+                              If a model in this unit is slain, you can
+                              pick 1 enemy unit within 1" of this unit
+                              and roll a dice. If the roll is equal to or
+                              greater than the Petty Vengeance Roll
+                              for the slain model, that enemy unit
+                              suffers 1 mortal wound.
+                        </p>
+                        <div class="container">
+                              <div class="row">
+                                    <div class="col-2 border aos_dark text-center">KEYWORDS</div>
+                                    <div class="col border text-left text-uppercase">
+                                          Chaos Disciples of Tzeentch, Daemon, Horrors of Tzeentch
+                                    </div>
+                              </div>
+                        </div>
+                  </div>
+            </div>
+      </div>
+
       <!-- Error dialog -->
       <div class="modal fade" id="errorDialog">
             <div class="modal-dialog">
@@ -85,13 +252,12 @@
             </div>
       </div>
 
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
             crossorigin="anonymous"></script>
-
       <script type="module" src="./dist/prettyscribe.js"></script>
 
 </body>
