--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img id="role_hs" src="./assets/icon_HS.png">
             <img id="role_lw" src="./assets/icon_LW.png">
             <img id="role_tr" src="./assets/icon_TR.png">
-            <img id="aos_stats" src="./assets/aos_stats.svg">
+            <img id="aos_stats" src="./assets/aos_stats_min.svg">
       </div>
 
       <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
@@ -71,6 +71,52 @@
             <div id="force-units"></div>
       </div>
 
+      <!-- AoS Warcry Unit Display prototype -->
+      <div class="container border" style="display:none;">
+            <div class="row">
+                  <div class="col-6">
+                        <p>--Unit Name--</p>
+                  </div>
+                  <div class="col-6">
+                       <span class="border rounded-circle">--Faction--</span>
+                       <span class="border rounded-circle">--Points--</span>
+                  </div>
+            </div>
+            <div class="row">
+                  <div class="col-6">
+                        <div>
+                              <span class="border">Icon</span>
+                              <span class="border">Range</span>
+                              <span class="border">Attacks</span>
+                              <span class="border">Str</span>
+                              <span class="border">Damage</span>
+                        </div>
+                  </div>
+                  <div class="col-6">
+                        <span class="border rounded-circle">Rune 0</span>
+                        <span class="border rounded-circle">Rune 1</span>
+                        <span class="border rounded-circle">Rune 2</span>
+                  </div>
+            </div>
+            <div class="row">
+                  <div class="col-6">
+                        <div>
+                              <span class="border">Icon</span>
+                              <span class="border">Range</span>
+                              <span class="border">Attacks</span>
+                              <span class="border">Str</span>
+                              <span class="border">Damage</span>
+                        </div>
+                  </div>
+                  <div class="col-6">
+                        <span class="border">Move</span>
+                        <span class="border">Toughness</span>
+                        <span class="border">Wounds</span>
+                  </div>
+            </div>
+      </div>
+
+      <!-- AoS Unit Display prototype -->
       <div class="container-fluid" style="display:none;">
             <div class="row">
                   <div class="col-3">
