--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
 
       <!-- AoS Warcry Unit Display prototype -->
-      <div class="container-fluid border" style="display:none;>
+      <div class="container-fluid border" style="display:none;">
             <div class="row align-items-center">
                   <div class="col">
                         <p class="warcry_font" style="font-size: 2.2em;">Gaunt Summoner on Disc</p>
